src/z80asm/z80asm2/t/30-directive/expected/incbin_02.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/incbin_02.asm
Assembling t/30-directive/input/incbin_02.asm...
t/30-directive/input/incbin_02.asm:1:27: error: Unexpected token after BINARY: extra
    incbin file-not-found.bin extra
                              ^
